kubernetes/production.postgres-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-deployment
  namespace: financer
  labels:
    name: postgres
    env: productions
    app: financer
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - image: postgres:15.2
          name: postgres
          ports:
            - containerPort: 5432
              name: postgres
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "0.2"
              memory: "200Mi"
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
            - name: postgres-init
              mountPath: /docker-entrypoint-initdb.d/
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data-volume
        - name: postgres-init
          configMap:
            name: postgres-initial-config
---
apiVersion: v1
kind: Service
metadata:
  namespace: financer
  name: postgres
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
  clusterIP: None
