kubernetes/production.webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  namespace: financer
  labels:
    name: webapp
    env: productions
    app: financer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - image: ghcr.io/shamalainen/financer:latest
          name: webapp
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "0.5"
              memory: "500Mi"
            requests:
              cpu: "0.002"
              memory: "30Mi"
          ports:
            - containerPort: 4000
              name: webapp
          livenessProbe:
            httpGet:
              path: /health-check/ping
              port: 4000
            initialDelaySeconds: 15
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /health-check/ping
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  namespace: financer
  name: financer
  labels:
    app: financer
spec:
  ports:
    - port: 80
      targetPort: 4000
  selector:
    app: webapp

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: financer
  namespace: financer
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
    - host: financer.silte.fi
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: financer
                port:
                  number: 80
